--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -112,4 +112,6 @@
     <string name="duration">Duration</string>
     <string name="distance">Distance</string>
 
+    <string name="recent_activities">Recent Activities</string>
+
 </resources>
